--- a/data/po/be.po
+++ b/data/po/be.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Денис Ким <dvkim98@gmail.com>, 2019-2022\n"
+"Last-Translator: Źmicier Turok <nashtlumach@gmail.com>, 2018\n"
 "Language-Team: Belarusian (http://www.transifex.com/supertuxkart/supertuxkart/language/be/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4126,7 +4126,7 @@ msgstr[3] "%d арэн недаступна ў самотнай гульне."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\n, 2015\nДенис Ким, 2019-2020\nViktar Vauchkevich, 2017-2019\nŹmicier Turok, 2018\nZmicer Turok, >, 2018"
+msgstr "Launchpad Contributions:\n, 2015\nДенис Ким, 2019-2020\nViktar Vauchkevich, 2017-2019,2021\nŹmicier Turok, 2018\nZmicer Turok, >, 2018\nДенис Ким, 2019-2022\nViktar Vauchkevich, 2017-2019"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
