--- a/data/po/bg.po
+++ b/data/po/bg.po
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Любомир Василев, 2020-2022\n"
+"Last-Translator: FIRST AUTHOR <EMAIL@ADDRESS>, 2010\n"
 "Language-Team: Bulgarian (http://www.transifex.com/supertuxkart/supertuxkart/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4114,7 +4114,7 @@ msgstr[1] "%d арени са недостъпни в самостоятелен
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Участници с принос в Launchpad:\nBenau, 2018-2019\nЛюбомир Василев, 2015-2016\nЛюбомир Василев, 2016-2020\nЛюбомир Василев, 2020-2021\nDawid Gan\nSvetoslav Stefanov\nТрансифекс:\nЛюбомир Василев"
+msgstr "Launchpad Contributions:\nBenau, 2018-2019\nЛюбомир Василев, 2015-2016\nЛюбомир Василев, 2016-2020\nЛюбомир Василев, 2020-2022\nЛюбомир Василев, 2020-2021\nDawid Gan\nSvetoslav Stefanov\nТрансифекс:\nЛюбомир Василев"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
