--- a/data/po/ca.po
+++ b/data/po/ca.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Marc Coll Carrillo <marc.coll.carrillo@gmail.com>, 2015-2022\n"
+"Last-Translator: Marc Coll Carrillo, 2012\n"
 "Language-Team: Catalan (http://www.transifex.com/supertuxkart/supertuxkart/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4113,7 +4113,7 @@ msgstr[1] "%d arenes no disponibles amb un sol jugador."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nBenau, 2018\nMarc Coll Carrillo, 2012\nMarc Coll Carrillo, 2015-2021\nAljullu\nDawid Gan\nMarc Coll Carrillo\nSTK-team\nTae-Wong SEO\nVPablo"
+msgstr "Launchpad Contributions:\nBenau, 2018\nMarc Coll Carrillo, 2012\nMarc Coll Carrillo, 2015-2022\nMarc Coll Carrillo, 2015-2021\nAljullu\nDawid Gan\nMarc Coll Carrillo\nSTK-team\nTae-Wong SEO\nVPablo"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
