--- a/data/po/da.po
+++ b/data/po/da.po
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Lars Lyngby <larslyngby@hotmail.com>, 2019-2022\n"
+"Last-Translator: Joe Hansen <joedalton2@yahoo.dk>, 2009,2015\n"
 "Language-Team: Danish (http://www.transifex.com/supertuxkart/supertuxkart/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4115,7 +4115,7 @@ msgstr[1] "%d utilgængelige arenaer i enkeltspiller."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nBenau, 2018\nJoe Hansen, 2009,2015\nLars Lyngby, 2019-2021\nscootergrisen, 2015-2021\nSøren Dyhr, 2015-2016\n1001sd\nAputsiaĸ Niels Janussen\nAuria\nJ\nMarcus Møller\nSTK-team\nLars Lyngby\nscootergrisen"
+msgstr "Launchpad Contributions:\nBenau, 2018\nJoe Hansen, 2009,2015\nLars Lyngby, 2019-2022\nscootergrisen, 2015-2021\nSøren Dyhr, 2015-2016\nLars Lyngby, 2019-2021\n1001sd\nAputsiaĸ Niels Janussen\nAuria\nJ\nMarcus Møller\nSTK-team\nLars Lyngby\nscootergrisen"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
