--- a/data/po/eo.po
+++ b/data/po/eo.po
@@ -11,8 +11,11 @@
 # Jorge Maldonado Ventura <jorgesumle@freakspot.net>, 2021
 # Kevin G <k@guillaumond.me>, 2021
 # Lagash, 2022
+# Lagash, 2022
+# Nicolas G, 2022
 # Nicolas G, 2022
 # Rachel Singh <rachel@moosader.com>, 2018
+# Robin van der Vliet <info@robinvandervliet.com>, 2015
 # Robin van der Vliet <info@robinvandervliet.com>, 2015
 # Stefan R. Grotz <stefan.grotz@posteo.de>, 2019
 # Любомир Василев, 2016
@@ -23,7 +26,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Nicolas G, 2022\n"
+"Last-Translator: Любомир Василев, 2016\n"
 "Language-Team: Esperanto (http://www.transifex.com/supertuxkart/supertuxkart/language/eo/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4123,7 +4126,7 @@ msgstr[1] "%d arenoj ne haveblas en solludista modo."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nHendur Saga, 2020\nJakub Fabijan, 2021\nJonas Marx, 2017\nJorge Maldonado Ventura, 2021\nKevin G, 2021\nRachel Singh, 2018\nRobin van der Vliet, 2015\nStefan R. Grotz, 2019\nЛюбомир Василев, 2016\nЛюбомир Василев, 2016-2017\nRubén\nSTK-team\nÉfrit"
+msgstr "Launchpad Contributions:\nHendur Saga, 2020\nLagash, 2022\nJakub Fabijan, 2021\nJonas Marx, 2017\nJorge Maldonado Ventura, 2021\nKevin G, 2021\nNicolas G, 2022\nRachel Singh, 2018\nRobin van der Vliet, 2015\nStefan R. Grotz, 2019\nЛюбомир Василев, 2016\nЛюбомир Василев, 2016-2017\nRubén\nSTK-team\nÉfrit"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
