--- a/data/po/et.po
+++ b/data/po/et.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # emlar emlar, 2022
+# emlar emlar, 2022
 # Ivar Smolin <okul@linux.ee>, 2020
 # Urmas Kvell, 2020,2022
 # Urmas Kvell, 2020
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: emlar emlar, 2022\n"
+"Last-Translator: Urmas Kvell, 2020,2022\n"
 "Language-Team: Estonian (http://www.transifex.com/supertuxkart/supertuxkart/language/et/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4113,7 +4114,7 @@ msgstr[1] ""
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nIvar Smolin, 2020\nUrmas Kvell, 2020"
+msgstr "Launchpad Contributions:\nemlar emlar, 2022\nIvar Smolin, 2020\nUrmas Kvell, 2020,2022\nUrmas Kvell, 2020"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
