--- a/data/po/eu.po
+++ b/data/po/eu.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Osoitz <oelkoro@gmail.com>, 2018-2020,2022\n"
+"Last-Translator: Urtzi Odriozola <urtzi.odriozola@gmail.com>, 2017\n"
 "Language-Team: Basque (http://www.transifex.com/supertuxkart/supertuxkart/language/eu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4118,7 +4118,7 @@ msgstr[1] "Jokalari bakarreko %d borroka-zelai ez daude erabilgarri."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nAnder Elortondo, 2016-2018,2020\nAsier Iturralde Sarasola, 2015\nIdoia Suárez, 2018\nManex Agirrezabal, 2015\nMikel Olasagasti Uranga, 2015\nOsoitz, 2018-2020\nTxus Ordorika, 2018-2019\nUrtzi Odriozola, 2017\nAmy Smile Kerkhof\nAnder Elortondo\nAsier Iturralde Sarasola\nJan Mees\nMikel Iturbe Urretxa\nSTK-team"
+msgstr "Launchpad Contributions:\nAnder Elortondo, 2016-2018,2020\nAsier Iturralde Sarasola, 2015\nIdoia Suárez, 2018\nManex Agirrezabal, 2015\nMikel Olasagasti Uranga, 2015\nOsoitz, 2018-2020,2022\nTxus Ordorika, 2018-2019\nUrtzi Odriozola, 2017\nOsoitz, 2018-2020\nAmy Smile Kerkhof\nAnder Elortondo\nAsier Iturralde Sarasola\nJan Mees\nMikel Iturbe Urretxa\nSTK-team"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
