--- a/data/po/fi.po
+++ b/data/po/fi.po
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Jiri Grönroos <jiri.gronroos@iki.fi>, 2015-2022\n"
+"Last-Translator: Markus Mikkonen <markus.mikkonen@outlook.com>, 2021\n"
 "Language-Team: Finnish (http://www.transifex.com/supertuxkart/supertuxkart/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4114,7 +4114,7 @@ msgstr[1] "%d areenaa ei käytettävissä yksinpelissä."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nJaakoppi Horila, 2018-2019\nJiri Grönroos, 2015-2021\nKristian Laakkonen, 2018-2019,2021\nMarkus Mikkonen, 2021\nOi Suomi On!, 2020-2021\nLaunchpad Contributions:\nDawid Gan\nJoonas Nurmi\nKristian Laakkonen\nSTK-team"
+msgstr "Launchpad Contributions:\nJaakoppi Horila, 2018-2019,2022\nJiri Grönroos, 2015-2022\nKristian Laakkonen, 2018-2019,2021\nMarkus Mikkonen, 2021\nOi Suomi On!, 2020-2021\nJaakoppi Horila, 2018-2019\nJiri Grönroos, 2015-2021\nLaunchpad Contributions:\nDawid Gan\nJoonas Nurmi\nKristian Laakkonen\nSTK-team"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
