--- a/data/po/gd.po
+++ b/data/po/gd.po
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: GunChleoc, 2015-2019,2021-2022\n"
+"Last-Translator: GunChleoc, 2018\n"
 "Language-Team: Gaelic, Scottish (http://www.transifex.com/supertuxkart/supertuxkart/language/gd/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4123,7 +4123,7 @@ msgstr[3] "Tha %d raon spòrs ann nach fhaigh thu sa mhodh aon-chluicheadair."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nGunChleoc, 2015-2019,2021\nGunChleoc, 2018\nGunChleoc, 2012-2015\nDawid Gan\nGunChleoc\nSTK-team"
+msgstr "Launchpad Contributions:\nGunChleoc, 2015-2019,2021-2022\nGunChleoc, 2018\nGunChleoc, 2012-2015\nGunChleoc, 2015-2019,2021\nDawid Gan\nGunChleoc\nSTK-team"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
