--- a/data/po/id.po
+++ b/data/po/id.po
@@ -24,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Ai_ZAQraven <ishaqalasyja@gmail.com>, 2021-2022\n"
+"Last-Translator: Triyan W. Nugroho <triyan.wn@gmail.com>, 2020\n"
 "Language-Team: Indonesian (http://www.transifex.com/supertuxkart/supertuxkart/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4119,7 +4119,7 @@ msgstr[0] "Arena %d tidak tersedia untuk mode pemain tunggal."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nAdzka -, 2021\nAi_ZAQraven, 2021\nliimee, 2021\nChristian Elbrianno, 2017\nChristian Elbrianno Yoga, 2017\nDito Kurnia Pratama, 2019\nIcho Yulian Chandra, 2016\nIwan Rahardi Putra, 2017\nRaja Sulaiman, 2017\nTriyan W. Nugroho, 2020\nAi_ZAQraven, 2020-2021\nArief Setiadi Wibowo\nAziz Rahmad\nDawid Gan\nEga Zulfikar\nIcho Y. Chandra\nMuhammad Radifar\nSTK-team\nTriyan W. Nugroho"
+msgstr "Launchpad Contributions:\nAdzka -, 2021\nAi_ZAQraven, 2021-2022\nliimee, 2021\nChristian Elbrianno, 2017\nChristian Elbrianno Yoga, 2017\nDito Kurnia Pratama, 2019\nIcho Yulian Chandra, 2016\nIwan Rahardi Putra, 2017\nRaja Sulaiman, 2017\nTriyan W. Nugroho, 2020\nAi_ZAQraven, 2020-2021\nAi_ZAQraven, 2021\nArief Setiadi Wibowo\nAziz Rahmad\nDawid Gan\nEga Zulfikar\nIcho Y. Chandra\nMuhammad Radifar\nSTK-team\nTriyan W. Nugroho"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
