--- a/data/po/it.po
+++ b/data/po/it.po
@@ -13,6 +13,7 @@
 # Ioma Taani, 2019-2022
 # Ioma Taani, 2016,2018
 # Lorenzo <lorenzo.mijorus@gmail.com>, 2015
+# Lorenzo <lorenzo.mijorus@gmail.com>, 2015
 # Luca Argentieri <luca@elinvention.ovh>, 2015
 # Luca Argentieri <luca@elinvention.ovh>, 2015
 # Massimo Gismondi <omino.gis@gmail.com>, 2021
@@ -20,6 +21,7 @@
 # mimiz skindoor <matteomeneghello02@gmail.com>, 2020-2021
 # Massimo Gismondi <omino.gis@gmail.com>, 2019-2020
 # Ioma Taani, 2018-2021
+# Riccardi Unix, 2022
 # Riccardi Unix, 2022
 # Simone Rizzo, 2019
 # Simone Rizzo, 2019
@@ -30,7 +32,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Ioma Taani, 2019-2022\n"
+"Last-Translator: s m <immiimmiimmiimmi@gmail.com>, 2020\n"
 "Language-Team: Italian (http://www.transifex.com/supertuxkart/supertuxkart/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4135,7 +4137,7 @@ msgstr[2] "%d arena non disponibile in modalità giocatore singolo."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nBenau, 2020\nDavide Depau, 2015\nEnrico B., 2015\nGiuseppe Pignataro, 2015\nIoma Taani, 2016-2021\nlorenzo mijorus, 2015\nLuca Argentieri, 2015\nmattia_b89, 2017,2019-2020\nmimiz skindoor, 2020-2021\nMassiminoilTrace, 2019-2020\nSimone Rizzo, 2019\ns m, 2020\nAlessandro Aragione\nAndrea Panontin\nAndrea Pivetta\nDawid Gan\nDiego Pierotto\nGigu\nGuido Barbi\nMassimiliano Caniparoli\nMax Perkins\nOibaf\nSTK-team\ngrandefava\nmarco\nnicoelba\nt3ddy"
+msgstr "Launchpad Contributions:\nBenau, 2020\nDavide Depau, 2015\nEnrico B., 2015\nGiuseppe Pignataro, 2015\nIoma Taani, 2016,2018\nIoma Taani, 2019-2022\nLorenzo, 2015\nLuca Argentieri, 2015\nMassimo Gismondi, 2021\nmattia_b89, 2017,2019-2020\nmimiz skindoor, 2020-2021\nMassimo Gismondi, 2019-2020\nIoma Taani, 2018-2021\nRiccardi Unix, 2022\nSimone Rizzo, 2019\ns m, 2020\nIoma Taani, 2016-2021\nlorenzo mijorus, 2015\nMassiminoilTrace, 2019-2020\nAlessandro Aragione\nAndrea Panontin\nAndrea Pivetta\nDawid Gan\nDiego Pierotto\nGigu\nGuido Barbi\nMassimiliano Caniparoli\nMax Perkins\nOibaf\nSTK-team\ngrandefava\nmarco\nnicoelba\nt3ddy"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
