--- a/data/po/nb.po
+++ b/data/po/nb.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the supertuxkart package.
 # 
 # Translators:
+# 111more1, 2022
 # Allan Nordhøy <epost@anotheragency.no>, 2016-2017
 # HH6899 <draven6@live.no>, 2018
 # Elias Nykrem <bloodaxeNOR@protonmail.com>, 2022
 # Håvard Handegård <havhan6899@gmail.com>, 2021
 # HH6899 <draven6@live.no>, 2018
-# IAN RODRÍGUEZ Lorenzo, 2022
+# 111more1, 2022
 # Karl Ove Hufthammer <karl@huftis.org>, 2015
 # Magne Djupvik <magnedj@gmail.com>, 2017-2018
 msgid ""
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: IAN RODRÍGUEZ Lorenzo, 2022\n"
+"Last-Translator: Karl Ove Hufthammer <karl@huftis.org>, 2015\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/supertuxkart/supertuxkart/language/nb/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4117,7 +4118,7 @@ msgstr[1] "%d baner utilgjengelige i énspillermodus"
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nAllan Nordhøy, 2016-2017\nHH6899, 2018\nHåvard Handegård, 2021\nKarl Ove Hufthammer, 2015\nMagne Djupvik, 2017-2018\nKarl Ove Hufthammer\nAllan Nordhøy, \nTidligere:\nDawid Gan\nEigil Iversen\nMagne Djupvik\noyvindln\nSTK-team\nTore Bergebakken"
+msgstr "Launchpad Contributions:\nAllan Nordhøy, 2016-2017\nHH6899, 2018\nElias Nykrem, 2022\nHåvard Handegård, 2021\n111more1, 2022\nKarl Ove Hufthammer, 2015\nMagne Djupvik, 2017-2018\nKarl Ove Hufthammer\nAllan Nordhøy,\nTidligere:\nDawid Gan\nEigil Iversen\nMagne Djupvik\noyvindln\nSTK-team\nTore Bergebakken"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
