--- a/data/po/nl.po
+++ b/data/po/nl.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Heimen Stoffels <vistausss@fastmail.com>, 2021-2022\n"
+"Last-Translator: David Blaszyk <david@sudomail.ne.jp>, 2017\n"
 "Language-Team: Dutch (http://www.transifex.com/supertuxkart/supertuxkart/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4118,7 +4118,7 @@ msgstr[1] "%d arena's niet beschikbaar in de éénspelermodus."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nDennis Holierhoek, 2016\nFrans van Rijn, 2015-2016\nHeimen Stoffels, 2021\nHeimen Stoffels, 2019-2021\nSteven van Tetering, 2019\nWard Muylaert, 2015-2017\nWillem Sonke, 2019\nDavid Blaszyk, 2017\nAsciimonster\nDawid Gan\nFoppe Benedictus\nGuus\nHeimen Stoffels\nKaj-Ivar\nKoen_VL\nSTK-team\nWard Muylaert\nWillem Sonke\nWim Champagne\nplutgamer\ntoams"
+msgstr "Launchpad Contributions:\nDavid Blaszyk, 2017\nDennis Holierhoek, 2016\nFrans van Rijn, 2015-2016\nHeimen Stoffels, 2021-2022\nHeimen Stoffels, 2019-2021\nSteven van Tetering, 2019\nWard Muylaert, 2015-2017\nWillem Sonke, 2019\nHeimen Stoffels, 2021\nAsciimonster\nDawid Gan\nFoppe Benedictus\nGuus\nHeimen Stoffels\nKaj-Ivar\nKoen_VL\nSTK-team\nWard Muylaert\nWillem Sonke\nWim Champagne\nplutgamer\ntoams"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
