--- a/data/po/oc.po
+++ b/data/po/oc.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Quentin PAGÈS, 2020-2022\n"
+"Last-Translator: Quentin PAGÈS, 2020\n"
 "Language-Team: Occitan (post 1500) (http://www.transifex.com/supertuxkart/supertuxkart/language/oc/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4112,7 +4112,7 @@ msgstr[1] ""
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nQuentin PAGÈS, 2020-2021\nQuentin PAGÈS, 2020"
+msgstr "Launchpad Contributions:\nQuentin PAGÈS, 2020\nQuentin PAGÈS, 2020-2022\nQuentin PAGÈS, 2020-2021"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
