--- a/data/po/pl.po
+++ b/data/po/pl.po
@@ -8,6 +8,7 @@
 # Jakub Fabijan <animatorzpolski@gmail.com>, 2021
 # Jakub Wojtkowiak <ctrahg123@gmail.com>, 2016,2021
 # Marcin Węclewski, 2022
+# Marcin Węclewski, 2022
 # mrkubax10 _ <mrkubax10@onet.pl>, 2022
 # Patryk Wychowaniec <patryk1303@gmail.com>, 2015-2016
 # Tomek Woźniak <tomek.wozniak1@gmail.com>, 2019
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Marcin Węclewski, 2022\n"
+"Last-Translator: Tomek Woźniak <tomek.wozniak1@gmail.com>, 2019\n"
 "Language-Team: Polish (http://www.transifex.com/supertuxkart/supertuxkart/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2520,7 +2521,7 @@ msgstr "Amanda"
 
 #. I18N: ../stk-assets/karts/beastie/kart.xml
 msgid "Godette"
-msgstr ""
+msgstr "Godette"
 
 #. I18N: ../stk-assets/karts/emule/kart.xml
 msgid "Emule"
@@ -4127,7 +4128,7 @@ msgstr[3] "%d aren niedostępnych w trybie dla jednego gracza."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nDeve, 2015\nDeve, 2016-2021\nJakub Wojtkowiak, 2016,2021\nPatryk Wychowaniec, 2015-2016\nTomek Woźniak, 2019\nAuria\nBill\nDawid Gan\nKuba Polankowski\nPatryk Wychowaniec\nSTK-team\nTwojwujaszek"
+msgstr "Launchpad Contributions:\nDeve, 2015\nDeve, 2015-2021\nJakub Fabijan, 2021\nJakub Wojtkowiak, 2016,2021\nMarcin Węclewski, 2022\nmrkubax10 _, 2022\nPatryk Wychowaniec, 2015-2016\nTomek Woźniak, 2019\nDeve, 2016-2021\nAuria\nBill\nDawid Gan\nKuba Polankowski\nPatryk Wychowaniec\nSTK-team\nTwojwujaszek"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
