--- a/data/po/pt.po
+++ b/data/po/pt.po
@@ -20,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Daniel Luiz Lorenzi <danielluizlorenzi@gmail.com>, 2022\n"
+"Last-Translator: Rui <xymarior@yandex.com>, 2016-2019\n"
 "Language-Team: Portuguese (http://www.transifex.com/supertuxkart/supertuxkart/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4125,7 +4125,7 @@ msgstr[2] "%d arenas não disponíveis no modo um jogador."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nBenau, 2018-2020\n274fb1bc2f045587a5bbfc0549580229_c79ef42 <a90af5d8fb05c0c8c5f467ee726f4458_270800>, 2015\nCrystal Da Eevee, 2019-2021\nPedroxz, 2017\nRui, 2016-2019\nRui, 2016\nAuria\nDawid Gan\nBruno Ramalhete\nDouglas Moura\nEvandro P. Alves\nFátima de Menezes Dantas\nJoão Frade / 100 NOME\nRicardo Conde\nSTK-team\nSérgio Marques"
+msgstr "Launchpad Contributions:\n274fb1bc2f045587a5bbfc0549580229_c79ef42 <a90af5d8fb05c0c8c5f467ee726f4458_270800>, 2015\nBenau, 2018-2020\nCrystal Da Eevee, 2019-2021\nDaniel Luiz Lorenzi, 2022\nPedroxz, 2017\nRui, 2016-2019\nRui, 2016\nAuria\nDawid Gan\nBruno Ramalhete\nDouglas Moura\nEvandro P. Alves\nFátima de Menezes Dantas\nJoão Frade / 100 NOME\nRicardo Conde\nSTK-team\nSérgio Marques"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
