--- a/data/po/pt_BR.po
+++ b/data/po/pt_BR.po
@@ -8,11 +8,12 @@
 # Maximilian Weiss-Föder, 2021
 # Benau, 2018,2020
 # Benau, 2018,2020
-# C. E., 2019-2020
-# C. E., 2020
+# C. E., 2019-2020,2022
+# C. E., 2020,2022
 # C. E., 2019
 # flaviozavan <flaviozavan@gmail.com>, 2015-2017
 # Laete Meireles <laetemn@gmail.com>, 2015
+# Matheus Meneghini Leal, 2022
 # Matheus Meneghini Leal, 2022
 # Maximilian Weiss-Föder, 2021
 # Maximilian Weiss-Föder, 2021-2022
@@ -24,7 +25,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Maximilian Weiss-Föder, 2021-2022\n"
+"Last-Translator: Rui <xymarior@yandex.com>, 2018\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/supertuxkart/supertuxkart/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2527,7 +2528,7 @@ msgstr "Amanda"
 
 #. I18N: ../stk-assets/karts/beastie/kart.xml
 msgid "Godette"
-msgstr ""
+msgstr "Godette"
 
 #. I18N: ../stk-assets/karts/emule/kart.xml
 msgid "Emule"
@@ -4129,7 +4130,7 @@ msgstr[2] "%d arenas indisponíveis no modo de um jogador."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Contribuições no Launchpad e no Transifex:\nAdevair Junior, 2018-2021\nAndré Marcelo Alvarenga, 2017-2018\nMaximilian Weiss-Föder, 2021\nBenau, 2018,2020\nC. E., 2020\nC. E., 2019\nflaviozavan, 2015-2017\nLaete Meireles, 2015\nPablo do Amaral Ferreira, 2015\nRui, 2018\nAdevair Heleno\nAverage John\nEberval Oliveira Castro\nEdvaldo de Souza Cruz\nFelipe Menezes\nFlávio Zavan\nGuilherme Marçal\nMarcelo R. de Sa\nMateus Ferreira Silva\nMihailov\nNeliton Pereira Jr.\nPaulo Roberto de Oliveira Castro\nPedro Folha\nRafael Neri\nRodrigo Borges\nRubens Bueno\nSTK-team\nTeylo Laundos Aguiar\nVitor da Silva Gonçalves\nfarrer"
+msgstr "Launchpad Contributions:\nAdevair Junior, 2018-2021\nAndré Marcelo Alvarenga, 2017-2018\nMaximilian Weiss-Föder, 2021\nBenau, 2018,2020\nC. E., 2019-2020\nC. E., 2020,2022\nC. E., 2019\nflaviozavan, 2015-2017\nLaete Meireles, 2015\nMatheus Meneghini Leal, 2022\nMaximilian Weiss-Föder, 2021-2022\nPablo do Amaral Ferreira, 2015\nRui, 2018\nC. E., 2020\nAdevair Heleno\nAverage John\nEberval Oliveira Castro\nEdvaldo de Souza Cruz\nFelipe Menezes\nFlávio Zavan\nGuilherme Marçal\nMarcelo R. de Sa\nMateus Ferreira Silva\nMihailov\nNeliton Pereira Jr.\nPaulo Roberto de Oliveira Castro\nPedro Folha\nRafael Neri\nRodrigo Borges\nRubens Bueno\nSTK-team\nTeylo Laundos Aguiar\nVitor da Silva Gonçalves\nfarrer"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
