--- a/data/po/sk.po
+++ b/data/po/sk.po
@@ -3,7 +3,8 @@
 # This file is distributed under the same license as the supertuxkart package.
 # 
 # Translators:
-# IAN RODRÍGUEZ Lorenzo, 2022
+# 111more1, 2022
+# 111more1, 2022
 # archetyp <archetyp@linuxmail.org>, 2015-2016
 # Deve <deveee@gmail.com>, 2019
 # Dušan Kazik <prescott66@gmail.com>, 2015
@@ -18,7 +19,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: IAN RODRÍGUEZ Lorenzo, 2022\n"
+"Last-Translator: Vladimír Záhradník <vladimir@zahradnik.io>, 2018\n"
 "Language-Team: Slovak (http://www.transifex.com/supertuxkart/supertuxkart/language/sk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4128,7 +4129,7 @@ msgstr[3] "%d arén nie je k dispozícii v režime jedného hráča."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\narchetyp, 2015-2016\nDeve, 2019\nDušan Kazik, 2015\nMiroslavR, 2015-2016,2019\nVladimír Záhradník, 2018\nDawid Gan\nMiroslav Remák\nPrescott_SK\nSTK-team"
+msgstr "Launchpad Contributions:\n111more1, 2022\narchetyp, 2015-2016\nDeve, 2019\nDušan Kazik, 2015\nJose Riha, 2021\nMiroslavR, 2015-2016,2019\nVladimír Záhradník, 2018\nDawid Gan\nMiroslav Remák\nPrescott_SK\nSTK-team"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
