--- a/data/po/tr.po
+++ b/data/po/tr.po
@@ -5,6 +5,7 @@
 # Translators:
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010
 # Rover, 2022
+# Rover, 2022
 # Serdar Sağlam <teknomobil@msn.com>, 2019-2022
 # U. Ozan Basar <software@nano.net.tr>, 2015
 # Volkan Gezer <volkangezer@gmail.com>, 2015
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Serdar Sağlam <teknomobil@msn.com>, 2019-2022\n"
+"Last-Translator: Volkan Gezer <volkangezer@gmail.com>, 2015\n"
 "Language-Team: Turkish (http://www.transifex.com/supertuxkart/supertuxkart/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4115,7 +4116,7 @@ msgstr[1] "%d arenası tek oyuncuda kullanılamıyor."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nSerdar Sağlam, 2019-2021\nU. Ozan Basar, 2015\nVolkan Gezer, 2015\nyakup, 2015-2017\nDawid Gan\nMuhammet Kara\nOsman Tosun\nSTK-team\nVolkan Gezer\nemre can yılmaz\nlinuxseven\nmaidis\nyakup\nzeugma\nSerdar Sağlam\nRables"
+msgstr "Launchpad Contributions:\nRover, 2022\nSerdar Sağlam, 2019-2022\nU. Ozan Basar, 2015\nVolkan Gezer, 2015\nyakup, 2015-2017\nSerdar Sağlam, 2019-2021\nDawid Gan\nMuhammet Kara\nOsman Tosun\nSTK-team\nVolkan Gezer\nemre can yılmaz\nlinuxseven\nmaidis\nyakup\nzeugma\nSerdar Sağlam\nRables"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
