--- a/data/po/tt.po
+++ b/data/po/tt.po
@@ -12,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Булат Ибраһим <bulat_ibrahim@mail.ru>, 2015-2017,2021\n"
+"Last-Translator: Timur Seber <seber.tatsoft@gmail.com>, 2021\n"
 "Language-Team: Tatar (http://www.transifex.com/supertuxkart/supertuxkart/language/tt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4107,7 +4107,7 @@ msgstr[0] "%d аренасын ялгыз уенда сайлап булмый."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nБулат Ибраһим, 2015-2017\nDawid Gan"
+msgstr "Launchpad Contributions:\nTimur Seber, 2021\nБулат Ибраһим, 2015-2017,2021\nБулат Ибраһим, 2015-2017\nDawid Gan"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
