--- a/data/po/uk.po
+++ b/data/po/uk.po
@@ -3,11 +3,14 @@
 # This file is distributed under the same license as the supertuxkart package.
 # 
 # Translators:
-# IAN RODRÍGUEZ Lorenzo, 2022
+# 111more1, 2022
+# 111more1, 2022
 # Boden <Bodenchuk@bigmir.net>, 2021
 # Boden <Bodenchuk@bigmir.net>, 2021
 # d4708, 2022
+# d4708, 2022
 # fedik <fedikw@gmail.com>, 2015-2017,2019
+# KotoWhiskas, 2022
 # KotoWhiskas, 2022
 # Max Lyashuk <m_lyashuk@ukr.net>, 2015-2016
 # Olexandr Nesterenko <nolexndr@gmail.com>, 2020
@@ -15,6 +18,8 @@
 # Yaroslav Serhieiev <noomorph@gmail.com>, 2018
 # Yaroslav Serhieiev <noomorph@gmail.com>, 2018
 # Ондрош Руснак, 2022
+# Ондрош Руснак, 2022
+# Суспільне Надбання, 2022
 # Суспільне Надбання, 2022
 msgid ""
 msgstr ""
@@ -22,7 +27,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Ондрош Руснак, 2022\n"
+"Last-Translator: Суспільне Надбання, 2022\n"
 "Language-Team: Ukrainian (http://www.transifex.com/supertuxkart/supertuxkart/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4132,7 +4137,7 @@ msgstr[3] "%d арен не доступно в одиночній грі."
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Суспільне Надбання, 2022\nBoden, 2021\nfedik, 2015-2017,2019\nMax Lyashuk, 2015-2016\nOlexandr Nesterenko, 2020\nSergey Sergey, 2020\nYaroslav Serhieiev, 2018\nDawid Gan\nHelen Antonova\nJOker\nMaks Lyashuk aka Ma)(imuM\nPasha Sydoryshyn\nPavlo Bilyak\nSTK-team\nVolodymyr Bodenchuk\nСергій Дубик"
+msgstr "Launchpad Contributions:\n111more1, 2022\nBoden, 2021\nd4708, 2022\nfedik, 2015-2017,2019\nKotoWhiskas, 2022\nMax Lyashuk, 2015-2016\nOlexandr Nesterenko, 2020\nSergey Sergey, 2020\nYaroslav Serhieiev, 2018\nОндрош Руснак, 2022\nСуспільне Надбання, 2022\nDawid Gan\nHelen Antonova\nJOker\nMaks Lyashuk aka Ma)(imuM\nPasha Sydoryshyn\nPavlo Bilyak\nSTK-team\nVolodymyr Bodenchuk\nСергій Дубик"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
