--- a/data/po/zh_TW.po
+++ b/data/po/zh_TW.po
@@ -20,7 +20,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-09-20 11:30+0800\n"
 "PO-Revision-Date: 2015-02-15 01:58+0000\n"
-"Last-Translator: Benau, 2016,2018-2020,2022\n"
+"Last-Translator: Ｖ字龍(Vdragon) <Vdragon.Taiwan@gmail.com>, 2015\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/supertuxkart/supertuxkart/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4115,7 +4115,7 @@ msgstr[0] "%d 個競技場在單人遊戲中不適用。"
 
 #: src/states_screens/credits.cpp:184
 msgid "translator-credits"
-msgstr "Launchpad Contributions:\nBen Au, 2015\nBenau, 2016,2018-2020\nBenau, 2015-2016\npan93412, 2018\nHsiu-Ming Chang, 2015\nHsiu-Ming Chang, 2015-2016\nHsiu-Ming Chang, 2015,2018-2020\n黃柏諺, 2015,2017-2019\nＶ字龍(Vdragon), 2015\n黃柏諺, 2019-2021\nBill\nCarl X. Su\nJeff Huang\nSTK-team\nWM\njyc\nminhsien\ntryneeds\nＶ字龍(Vdragon)"
+msgstr "Launchpad Contributions:\nBen Au, 2015\nBenau, 2016,2018-2020,2022\nBenau, 2015-2016\npan93412, 2018\nHsiu-Ming Chang, 2015\nHsiu-Ming Chang, 2015-2016\nHsiu-Ming Chang, 2015,2018-2020\n黃柏諺, 2015,2017-2019\nＶ字龍(Vdragon), 2015\n黃柏諺, 2019-2022\nBenau, 2016,2018-2020\n黃柏諺, 2019-2021\nBill\nCarl X. Su\nJeff Huang\nSTK-team\nWM\njyc\nminhsien\ntryneeds\nＶ字龍(Vdragon)"
 
 #: src/states_screens/dialogs/achievement_progress_dialog.cpp:65
 msgctxt "achievement_info"
